@@ -530,6 +530,9 @@ Release 0.21.0 - 2010-07-01
 
   BUG FIXES
 
+    HDFS-1311. Running tests with 'testcase' cause triple execution of the
+    same test case (Cos)
+
     HDFS-1299. 'compile-fault-inject' never should be called directly. (cos)
 
     HDFS-1193. -mvn-system-deploy target is broken which inturn fails the
